--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,8 +17,13 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.BirthdayWishing"
         tools:targetApi="31">
+        <activity
+            android:name=".Registration"
+            android:exported="false" />
+        <activity
+            android:name=".MainActivity2"
+            android:exported="false" />
         <activity android:name=".Reminder" />
-
         <activity
             android:name=".MainActivity"
             android:exported="false" />
@@ -26,7 +31,7 @@
             android:name=".wishingScreen"
             android:exported="false" />
         <activity
-            android:name=".MainActivity2"
+            android:name=".Login"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
