more consistent theme/UI

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -48,6 +48,9 @@
             <meta-data
                 android:name="android.support.FILE_PROVIDER_PATHS"
                 android:resource="@xml/path" />
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_SUGGESTED_SUFFIXES"
+                android:value="jpg" />
         </provider>
 
         <meta-data
