--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,7 +31,13 @@
             android:name=".wishingScreen"
             android:exported="false" />
         <activity
+            android:name=".BgViewActivity"
+            android:exported="false" />
+        <activity
             android:name=".Login"
+            android:exported="false" />
+        <activity
+            android:name=".splash_activity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -46,11 +52,11 @@
             android:exported="false"
             android:grantUriPermissions="true">
             <meta-data
-                android:name="android.support.FILE_PROVIDER_PATHS"
-                android:resource="@xml/path" />
-            <meta-data
                 android:name="android.support.FILE_PROVIDER_SUGGESTED_SUFFIXES"
                 android:value="jpg" />
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/file_paths" />
         </provider>
 
         <meta-data
